<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.adms.tracker.Activities.LoginActivity"
    android:splitMotionEvents="false"
    android:id="@+id/root_view">



    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"

        android:background="@drawable/gradient_drawable_background">



        <RelativeLayout
            android:splitMotionEvents="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/top_layout"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:layout_marginLeft="44dp"
                    android:layout_marginRight="44dp"
                    android:id="@+id/logo_layout"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_title"
                        android:textSize="50dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:textColor="#000000" />

                </RelativeLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="44dp"
                    android:paddingRight="44dp"
                    android:layout_marginTop="30dp">



                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/user_code"
                                android:hint="@string/login_label1"
                                android:width="300dp"
                                android:textColor="#ff000000"
                                android:gravity="center_vertical|center_horizontal"

                                android:height="50dp"
                                android:layout_alignLeft="@+id/user_password"
                                android:layout_alignStart="@+id/user_password"
                                android:layout_marginTop="0dp"
                                android:textColorHint="#ff5c5c5c" />

                    <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/user_password"
                                android:width="300dp"
                                android:height="50dp"
                                android:hint="@string/login_label2"
                                android:gravity="center_vertical|center_horizontal"
                                android:textColorHint="#ff5c5c5c"
                                android:layout_below="@+id/user_code"
                                android:layout_alignLeft="@+id/button2"
                                android:layout_alignStart="@+id/button2"
                                android:layout_marginTop="30dp" />

                    <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginTop="30dp"
                                android:background="@drawable/round_button"
                                android:id="@+id/login_button_layout">


                                <TextView
                                    android:layout_width="fill_parent"
                                    android:layout_height="fill_parent"
                                    android:textAppearance="?android:attr/textAppearanceMedium"
                                    android:text="@string/login_button"
                                    android:id="@+id/textView3"
                                    android:gravity="center_vertical|center_horizontal"
                                    android:layout_marginLeft="20dp"
                                    android:layout_centerInParent="true"
                                    style="@style/button_text" />

                                <ProgressBar
                                    android:id="@+id/login_spinner"
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_alignParentRight="true"
                                    android:layout_alignParentEnd="true"
                                    android:layout_centerVertical="true"
                                    android:indeterminateDrawable="@drawable/login_progress"
                                    android:visibility="gone"
                                    tools:targetApi="17"
                                    android:layout_marginRight="10dp" />

                            </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:id="@+id/relativeLayout2"
                        android:layout_gravity="center_horizontal" >

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_horizontal" >

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="fill_parent"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/login_forgot_password"
                                android:id="@+id/forgot_password"
                                android:layout_below="@+id/user_password"
                                android:layout_alignLeft="@+id/user_password"
                                android:layout_alignStart="@+id/user_password"
                                android:textSize="14dp"
                                style="@style/semibold_text"
                                android:onClick="recover_password"
                                android:gravity="center_vertical"
                                android:layout_marginTop="10dp" />
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:id="@+id/relativeLayout"
                        android:layout_gravity="center_horizontal">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="match_parent"
                                android:text="@string/welcome_sing_up1"
                                android:id="@+id/textView9"
                                android:textSize="14dp"
                                android:gravity="center_vertical"
                                android:paddingRight="1dp"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                style="@style/semibold_text"
                                android:onClick="register" />

                        </LinearLayout>
                    </RelativeLayout>


                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_terms_and_conditions"
                android:id="@+id/textView4"
                style="@style/semibold_text"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="showTermsAndConditions"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:textSize="14dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_by_sign_in_text"
                android:id="@+id/textView10"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="14dp"
                android:layout_above="@+id/textView4"
                android:layout_centerHorizontal="true"
                android:textColor="#000000"
                android:textAppearance="?android:attr/textAppearanceMedium" />


        </RelativeLayout>





    </ScrollView>

</RelativeLayout>
