<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.adms.tracker.Activities.SystemRequirementsActivity"
    android:splitMotionEvents="false"
    android:id="@+id/root_view">



    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"

        android:background="@drawable/gradient_drawable_background">



        <RelativeLayout
            android:splitMotionEvents="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/top_layout"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/tracker_logo_height"
                    android:layout_marginTop="100dp"
                    android:layout_marginLeft="44dp"
                    android:layout_marginRight="44dp"
                    android:id="@+id/logo_layout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_title"
                        android:textSize="50dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:textColor="#000000" />

                </RelativeLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="44dp"
                    android:paddingRight="44dp"  >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/system_requirements_text1"
                        android:id="@+id/textView14"
                        android:layout_below="@+id/textView"
                        android:layout_centerHorizontal="true"
                        android:textSize="16dp"
                        android:gravity="center_vertical|center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" "
                        android:id="@+id/user_name"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:textSize="16dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/system_requirements_text2"
                        android:id="@+id/textView15"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:textSize="16dp" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp">

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="10dp">

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="fill_parent">

                                <CheckBox
                                    android:layout_width="wrap_content"
                                    android:layout_height="fill_parent"
                                    android:text="Google Play Services"
                                    android:id="@+id/google_play_services_checkBox"
                                    android:clickable="false"
                                    android:layout_alignParentTop="true"
                                    android:layout_alignParentLeft="true"
                                    android:layout_alignParentStart="true"
                                    android:layout_marginRight="10dp" />

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center_vertical">

                                    <RelativeLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:background="@drawable/round_button"
                                        android:paddingLeft="2dp"
                                        android:paddingRight="2dp"
                                        android:id="@+id/enable_google_play_service"
                                        android:gravity="right"
                                        android:layout_alignParentBottom="true"
                                        android:layout_alignParentRight="true"
                                        android:layout_alignParentEnd="true"
                                        android:nestedScrollingEnabled="false"
                                        android:visibility="visible">

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:textAppearance="?android:attr/textAppearanceMedium"
                                            android:text="Activar"
                                            android:id="@+id/textView"
                                            android:gravity="center_vertical|center_horizontal" />
                                    </RelativeLayout>
                                </RelativeLayout>

                            </LinearLayout>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="10dp">

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="fill_parent"
                                android:visibility="visible">

                                <CheckBox
                                    android:layout_width="wrap_content"
                                    android:layout_height="fill_parent"
                                    android:text="Acceso a Red de datos"
                                    android:id="@+id/network_checkBox"
                                    android:clickable="false"
                                    android:layout_alignParentTop="true"
                                    android:layout_alignParentLeft="true"
                                    android:layout_alignParentStart="true"
                                    android:layout_marginRight="10dp" />

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_vertical"
                                    android:visibility="visible">

                                    <RelativeLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:background="@drawable/round_button"
                                        android:id="@+id/enable_network_service"
                                        android:gravity="center_vertical|right"
                                        android:layout_alignParentBottom="true"
                                        android:layout_alignParentRight="true"
                                        android:layout_alignParentEnd="true"
                                        android:visibility="visible"
                                        android:paddingRight="2dp"
                                        android:paddingLeft="2dp">

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:textAppearance="?android:attr/textAppearanceMedium"
                                            android:text="Activar"
                                            android:id="@+id/textView2"
                                            android:gravity="center_vertical|center_horizontal"
                                            android:visibility="visible" />
                                    </RelativeLayout>
                                </RelativeLayout>

                            </LinearLayout>
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="10dp">

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="fill_parent" >

                                <CheckBox
                                    android:layout_width="wrap_content"
                                    android:layout_height="fill_parent"
                                    android:text="GPS activado"
                                    android:id="@+id/gps_checkBox"
                                    android:clickable="false"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_alignParentTop="true"
                                    android:layout_alignParentLeft="true"
                                    android:layout_alignParentStart="true" />

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center_vertical">

                                    <RelativeLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:background="@drawable/round_button"
                                        android:paddingLeft="2dp"
                                        android:paddingRight="2dp"
                                        android:id="@+id/enable_gps_service"
                                        android:gravity="right"
                                        android:layout_alignParentBottom="true"
                                        android:layout_alignParentRight="true"
                                        android:layout_alignParentEnd="true"
                                        android:visibility="visible">

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:textAppearance="?android:attr/textAppearanceMedium"
                                            android:text="Activar"
                                            android:id="@+id/textView7"
                                            android:gravity="center_vertical|center_horizontal" />
                                    </RelativeLayout>
                                </RelativeLayout>

                            </LinearLayout>

                        </RelativeLayout>
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/round_button"
                        android:id="@+id/continue_button_layout">


                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/system_requirements_button2"
                            android:id="@+id/button_label"
                            android:gravity="center_vertical|center_horizontal"
                            android:layout_marginLeft="20dp"
                            android:layout_centerInParent="true"
                            style="@style/button_text"
                            android:enabled="false" />



                    </RelativeLayout>


                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>





    </ScrollView>

</RelativeLayout>
